fix overflow

--- a/css/contact.css
+++ b/css/contact.css
@@ -10,7 +10,6 @@ body {
     background-image: url('../images/Forest background.png');
     background-position: center center;
     background-repeat: no-repeat;
-    background-attachment: fixed;
     background-size: cover;
 }
 
@@ -26,6 +25,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    overflow-y: auto;
 }
 
 #loggedInDiv {
